Update section tecnologias
Foi feito o efeito na section de tecnologias

--- a/index.html
+++ b/index.html
@@ -413,7 +413,14 @@
             <div class="title">Tecnologias</div>
             <h2>Tecnologias que ensinamos no treinamento</h2>
         </div>
-        <div class="logos-top" data-aos="fade-right">
+        <div class="logos-top marquee-left" data-aos="fade-right">
+            <div class="card">
+                <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
+                <div class="text">
+                    <h5>ReactJs</h5>
+                    <p>Uma biblioteca JavaScript que é usada para construir interfaces de usuário</p>
+                </div>
+            </div>
             <div class="card">
                 <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
                 <div class="text">
@@ -450,7 +457,14 @@
                 </div>
             </div>
         </div>
-        <div class="logos-bottom" data-aos="fade-left">
+        <div class="logos-bottom marquee-right" data-aos="fade-left">
+            <div class="card">
+                <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
+                <div class="text">
+                    <h5>ReactJs</h5>
+                    <p>Uma biblioteca JavaScript que é usada para construir interfaces de usuário</p>
+                </div>
+            </div>
             <div class="card">
                 <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
                 <div class="text">
