Update efeitos swiper
Ajustes em erros usando o swiper (Modal Youtube, Menu)

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
     <section class="hero">
         <div class="container">
-            <div class="text" data-aos="fade-up">
-                <div class="title">
+            <div class="text" >
+                <div class="title" data-aos="fade-up">
                     <img src="img/icons/icon_flame.png" alt="" class="icon">Evolua sua carreira de programação
                 </div>
-                <h1>Dê start na sua jornada profissional e faça sua carreira evoluir na programação</h1>
-                <p>Trilha de conhecimento completa, focada em atender as diferentes demandas do mercado.</p>
-                <a href="https://pay.kiwify.com.br/QTnxhp2"><button class="btn">Garantir minha vaga</button></a>
+                <h1 data-aos="fade-up">Dê start na sua jornada profissional e faça sua carreira evoluir na programação</h1>
+                <p data-aos="fade-up">Trilha de conhecimento completa, focada em atender as diferentes demandas do mercado.</p>
+                <a href="https://pay.kiwify.com.br/QTnxhp2"><button class="btn" data-aos="fade-up">Garantir minha vaga</button></a>
             </div>
         </div>
     </section>
@@ -94,8 +94,8 @@
                         </div>
                     </li>
                 </ul>
-                <div class="image" data-aos="fade-left">
-                    <button class="play">
+                <div class="image">
+                    <button class="play" data-aos="fade-left">
                         <img src="img/trail_man.jpg" alt="" class="img">
                         <div class="player">
                             <img src="img/icons/icon_play.svg" alt="">
@@ -106,7 +106,7 @@
                         <span class="modal-fechar">&times;</span>
                         <iframe class="modal-video" src="https://www.youtube.com/embed/YIM6WyjkCrg" frameborder="0" allowfullscreen></iframe>
                     </div>
-                    <div class="box">
+                    <div class="box" data-aos="fade-up">
                         <h2>+300</h2>
                         <p>Alunos no mercado de trabalho</p>
                     </div>
